--- a/main.css
+++ b/main.css
@@ -7,8 +7,14 @@ button{
     border: double rgb(78, 204, 78) 2px;
     border-radius: 4px;
     max-width: 80%;
+    
 }
 div{
     border: double rgb(78, 204, 78) 5px;
+    min-height: 100vh;
 
+}
+header{
+    background-color: rgb(138, 247, 138);
+    padding: 10px 10px;
 }
